# TO-BE-CEO

./: .env.example  .gitignore  1.md  LICENSE  README.md  README.zh-CN.md  pyproject.toml  render.yaml
docs/: agent-contracts.md  architecture.md  baseline-comparison.md  deployment.md  evaluation-rubric.md  execution-plan.md  github-metadata.md  license-strategy.md
examples/demo_cases/: README.md  ai-interview-coach.md  campus-secondhand-marketplace.md  crossborder-product-selection.md
src/intelligent_brain_company/: __init__.py  app.py  config.py  wsgi.py
src/intelligent_brain_company/agents/: contracts.py  registry.py  runtime.py
src/intelligent_brain_company/api/: __init__.py  planning.py  projects.py
src/intelligent_brain_company/domain/: models.py  project_state.py
src/intelligent_brain_company/interfaces/: cli.py
src/intelligent_brain_company/services/: llm_client.py  planning.py  project_store.py  task_store.py
src/intelligent_brain_company/static/: console.css  console.js
src/intelligent_brain_company/templates/: console.html
src/intelligent_brain_company/workflows/: pipeline.py
tests/: test_api.py  test_pipeline.py
