[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "intelligent-brain-company"
version = "0.1.0"
description = "AI-native company orchestration framework for idea evaluation and execution planning"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [
  { name = "Jiawei Men" }
]
keywords = ["agents", "ai", "orchestration", "planning", "multi-agent"]
dependencies = [
  "Flask>=3.0"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0"
]

[project.scripts]
ibc-plan = "intelligent_brain_company.interfaces.cli:main"
ibc-api = "intelligent_brain_company.app:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]